7_deploy_without_downtime/7_2_readiness_liveness/readiness/service-readiness.yaml
apiVersion: v1
kind: Service
metadata:
  name: readiness-service
  namespace: readiness-ns
  labels:
    app: readiness-deployment
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: readiness-deployment
