7_deploy_without_downtime/7_2_readiness_liveness/readiness/ingress-readiness.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: readiness-ingress
  namespace: readiness-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    # old certmanager integration
    certmanager.k8s.io/cluster-issuer: "letsencrypt-practice"
    # new certmanager integration
    cert-manager.io/cluster-issuer: "letsencrypt-practice"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts: 
      - readiness-service.mykubernetes.guru
      secretName: ssl-letsencrypt
  rules:
  - host: 'readiness-service.mykubernetes.guru'
    http:
      paths:
      - path: /
        backend:
          serviceName: readiness-service
          servicePort: 80
